[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/autoload/global.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/other/1up.wav" type="AudioStream" id=2]
[ext_resource path="res://src/autoload/global_stats.tres" type="Resource" id=3]

[node name="Global" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
stats = ExtResource( 3 )

[node name="GameExitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SndCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Sfx"
[connection signal="timeout" from="GameExitTimer" to="." method="_on_game_exit_timer_timeout"]
